// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default subsection header 1`] = `
<div
  className="subsection-header"
>
  <div
    className="subsection-content"
  >
    <h3
      className="title"
    >
      test
    </h3>
  </div>
</div>
`;

exports[`should render a subsection header with isCollapsible 1`] = `
<div
  className="subsection-header"
>
  <div
    aria-expanded={true}
    aria-level={2}
    className="subsection-content is-collapsible"
    data-row-show-focus="true"
    onBlur={[Function]}
    onMouseDown={[Function]}
    role="heading"
    tabIndex="0"
  >
    <div
      className="start"
    >
      <span
        className="accordion-icon is-open"
      />
    </div>
    <div
      className="fill"
    >
      <h3
        className="title"
      >
        test
      </h3>
    </div>
  </div>
</div>
`;

exports[`should render a subsection header with isCollpased 1`] = `
<div
  className="subsection-header"
>
  <div
    className="subsection-content"
  >
    <h3
      className="title"
    >
      test
    </h3>
  </div>
</div>
`;

exports[`should render a subsection header with level 1`] = `
<div
  className="subsection-header"
>
  <div
    className="subsection-content"
  >
    <h4
      className="title"
    >
      test
    </h4>
  </div>
</div>
`;

exports[`should render a subsection header with metaData 1`] = `
<div
  className="subsection-header"
>
  <div
    className="subsection-content"
  >
    <h3
      className="title"
    >
      test
    </h3>
  </div>
</div>
`;

exports[`should render a subsection header with onSelect 1`] = `
<div
  className="subsection-header"
>
  <div
    aria-expanded={true}
    aria-level={2}
    className="subsection-content is-collapsible"
    data-row-show-focus="true"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="heading"
    tabIndex="0"
  >
    <div
      className="start"
    >
      <span
        className="accordion-icon is-open"
      />
    </div>
    <div
      className="fill"
    >
      <h3
        className="title"
      >
        test
      </h3>
    </div>
  </div>
</div>
`;

exports[`should render a subsection header with refCallback 1`] = `
<div
  className="subsection-header"
>
  <div
    className="subsection-content"
  >
    <h3
      className="title"
    >
      test
    </h3>
  </div>
</div>
`;
